best offers complect

--- a/index.html
+++ b/index.html
@@ -47,9 +47,89 @@
               </div>
         </nav>
         <!-- banner section -->
+        <section>
+            <div class="flex flex-col justify-center items-center ">
+                <div class="flex justify-center relative">
+                    <img src="./images/banner.png">
+                    
+                </div>
+                <div class="absolute text-center space-y-2">
+                    <h1 class="text-5xl font-extrabold text-white">End-to-End Travel with<br><span class="text-green-500">P Paribahan</span></h1>
+                    <p class="text-white">End to End, your trusted travel partner for unforgettable journeys.<br> We are dedicated to providing one-window solutions for all your travel needs.</p>
+                    <button class="btn bg-green-400 font-bold">Buy Tickets</button>
+                </div>
+            </div>
+
+            <div class="flex justify-center gap-10">
+                <div class="flex gap-4 shadow-xl rounded-xl p-4 ">
+                    <div>
+                        <img src="./images/people.png">
+                    </div>
+                    <div>
+                        <h2 class="font-bold text-2xl">500K+</h2>
+                        <p >Registered users</p>
+                    </div>
+                </div>
+
+                <div class="flex gap-4 shadow-xl rounded-xl p-4">
+                    <div>
+                        <img src="./images/ticket-cupon.png">
+                    </div>
+                    <div>
+                        <h2 class="font-bold text-2xl">1.7 lacks</h2>
+                        <p >Tickets sold</p>
+                    </div>
+                </div>
+
+                <div class="flex gap-4 shadow-xl rounded-xl p-4">
+                    <div>
+                        <img src="./images/stoppage.png">
+                    </div>
+                    <div>
+                        <h2 class="font-bold text-2xl">80K+</h2>
+                        <p>Rental partners</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </header>
 
-    <main></main>
+    <main>
+        <!-- best offers for you -->
+        <section>
+            <h1 class="font-bold text-4xl text-center mt-14">Best offers for you</h1>
+            <div class="flex justify-center gap-10 mt-10">
+               <div class="flex gap-5 bg-amber-400 shadow-xl rounded-xl p-4">
+                <div>
+                    <h2 class="text-2xl font-bold">15% OFF</h2>
+                    <p class="font-bold">on your next purchase</p>
+                    <p>use by January 2024</p>
+                </div>
+
+                <div>
+                    <h2 class="text-2xl font-bold">NEW15</h2>
+                    <p>Coupon Code</p>
+                </div>
+               </div>
+
+               <div class="flex gap-5 bg-[#F78C9C] shadow-xl rounded-xl p-4">
+                <div>
+                    <h2 class="text-2xl font-bold">20% OFF</h2>
+                    <p class="font-bold">on your next purchase</p>
+                    <p>use by January 2024</p>
+                </div>
+
+                <div>
+                    <h2 class="text-2xl font-bold">Couple 20</h2>
+                    <p>Coupon Code</p>
+                </div>
+               </div>
+            </div>
+            <div class="flex justify-center mt-10">
+                <button class="btn text-green-500 text-xl border-green-500 bg-white">See All Offers</button>
+               </div>
+        </section>
+    </main>
 
     <footer></footer>
 </body>
