best 4 button disable add  complect

--- a/index.html
+++ b/index.html
@@ -271,6 +271,14 @@
                             <h3>BDT:<span id="total-cost">0</span> </h3>
                         </div>
                     </div>
+                    <div>
+                        <input id ="input-field" class="input input-bordered join-item w-40" placeholder="coupon">
+                        <button id="apply-btn" class="btn join-item rounded-md bg-green-500 text-black font-bold">Apply</button>
+                        <div class="flex justify-evenly">
+                            <p id="discount">Grend:</p>
+                        <p id="total">Total:</p>
+                        </div>
+                    </div>
                     
                 </div>
             </div>
